--- a/test/Rakefile
+++ b/test/Rakefile
@@ -23,10 +23,11 @@ end
 
 task :dothework => [:createBuildDirectory] do
      line_num=0
-     text=File.open('xxx.txt').read
+     text=File.open('github_projects.urls').read
      text.gsub!(/\r\n?/, "\n")
      text.each_line do |line|
-          print "#{line_num += 1} #{line}"	
+          git = line.match('https?://github.com/([^/\n\r]*)/([^/\n\r]*)/?')[1,2]
+          print "#{git} #{line}"	
      end
 end
 
