now with default

--- a/test/Rakefile
+++ b/test/Rakefile
@@ -10,7 +10,7 @@
 #    grep -lR "\(</teiHeader>\|</TEI>\|</TEI.2>\|</fileDesc>\|</bibl>\|<seg \)" $dir | sed "s|\([^/]*\)/\(.*\)|$stub/\1/raw/master/\2|"; 
 #done 
 
-task :dothework => [:createBuildDirectory] do
+task :default => [] do
      cp "github_projects.urls", "TMP"
      text=File.open('github_projects.urls').read
      text.gsub!(/\r\n?/, "\n")
